--- a/views/widget.jade
+++ b/views/widget.jade
@@ -82,7 +82,9 @@ block content
         dial_pad: true,
         button_style: 'style-b',
         background_style: 'dark',
-        widget_code: 'Click on Generate Code!'
+        widget_code: 'Click on Generate Code!',
+        sip_uri: 'echo@ivrs',
+        show_text_html_value: '<h3>This is a placeholder for your message</h3>'
       };
 
       $scope.prepareHtmlForCodepen = function(data){
@@ -107,6 +109,10 @@ block content
       $scope.isWebRTCSupported = function () {
         return voxbone.WebRTC.isWebRTCSupported();
       };
+
+      $scope.showCallButton = function () {
+        return $scope.widget.incompatible_browser_configuration != 'show_text_html';
+      }
 
       $scope.makeCall = function () {
         if(!$scope.isWebRTCSupported()){
@@ -162,7 +168,7 @@ block content
           send_digits: $scope.widget.send_digits
         }
 
-        var ibc= $scope.widget.incompatible_browser_configuration;
+        var ibc = $scope.widget.incompatible_browser_configuration;
         if (ibc == 'hide_widget')
           data['hide_widget'] = true;
         else if (ibc == 'link_button_to_a_page')
@@ -287,8 +293,8 @@ block content
                   .form-group
                     label.control-label SIP URI
                       span.badge(data-toggle='tooltip' data-placement="right" title="This is the SIP address where inbound traffic from your Click2Vox button will be directed. Enter any valid SIP URI or use one of our diagnostic URIs – echo@ivrs or digits@ivrs") ?
-                    input.form-control(required type="email", id="sip_uri", name="sip_uri", ng-model="widget.sip_uri", ng-pattern="/^[^@]+@[^@]+$/", ng-blur="sip_provisioning(widget_form)", placeholder="i.e. echo@ivrs")
-                    div(style='color: red' sng-show="widget_form.sip_uri.$touched")
+                    input.form-control(required type="email" id="sip_uri" name="sip_uri" ng-model="widget.sip_uri" ng-pattern="/^[^@]+@[^@]+$/" ng-blur="sip_provisioning(widget_form)" placeholder="i.e. echo@ivrs")
+                    div(style='color: red' ng-show="widget_form.sip_uri.$touched" )
                       div(ng-show="widget_form.sip_uri.$error.required") SIP URI is required
                       div(ng-show="widget_form.sip_uri.$error.pattern") SIP URI must be valid
                       div(ng-show="widget_form.cannot_validate_sip_uri") SIP URI cannot be validated. Please, try Again
@@ -341,8 +347,8 @@ block content
               .boxPanel.preview
                 .prev-view.light
                   .widget-box.style-b
-                    button.btn-style.mdi-communication-call#launch_call(ng-show="isWebRTCSupported()" ng-click="makeCall()") #[span {{widget.button_label || 'Call Sales'}}]
-                    .not-supported#not-supported-message(ng-show="!isWebRTCSupported()" ng-bind-html="widget.show_text_html_value")
+                    button.btn-style.mdi-communication-call#launch_call(ng-show="showCallButton()" ng-click="makeCall()") #[span {{widget.button_label || 'Call Sales'}}]
+                    .not-supported#not-supported-message(ng-show="!showCallButton()" ng-bind-html="widget.show_text_html_value")
                     .widget-footer-left
                       a(href="https://test.webrtc.org/" target="_blank") Test your setup
                     .widget-footer-right
