--- a/views/forgot.jade
+++ b/views/forgot.jade
@@ -35,7 +35,7 @@ block content
           };
           $http(req)
             .then(function successCallback(response){
-              document.getElementById("successmsg").innerHTML = "An email has been sent with a link to reset your password.";
+              document.getElementById("successmsg").innerHTML = "An email has been sent with a link to reset your password. Please check your inbox.";
               document.getElementById("successmsg").style.display = "block";
               document.getElementById("errormsg").style.display = "none";
               document.getElementById("tokenError").style.display = "none";
@@ -71,6 +71,6 @@ block content
                 div(ng-show="forgot_form.uemail.$dirty && forgot_form.uemail.$invalid")
                   div(ng-show="forgot_form.uemail.$error.email") Email is invalid
 
-              button.btn.btn-default#forgot(ng-click="forgot.processForm()") Reset Password
+              button.btn.btn-default#forgot(ng-disabled="forgot_form.$invalid" ng-click="forgot.processForm()") Reset Password
               br
               a(href="/")
