--- a/views/reset.jade
+++ b/views/reset.jade
@@ -50,9 +50,9 @@ block content
           require: 'ngModel',
           link: function (scope, elem, attrs, ctrl) {
             var firstPassword = '#' + attrs.pwCheck;
-            elem.on('input', function () {
+            elem.add(firstPassword).on('keyup', function () {
               scope.$apply(function () {
-                var v = elem.val() === $(firstPassword).val();
+                var v = elem.val()===$(firstPassword).val();
                 ctrl.$setValidity('pwmatch', v);
               });
             });
@@ -70,15 +70,16 @@ block content
 
         #form_container
           .formWrap
-            form#reset_form(name="reset_form", novalidate, ng-controller="ResetController")
+            form#reset_form(name="reset_form" novalidate ng-controller="ResetController")
               .form-group
                 label.control-label New Password
-                input.form-control(type="password", id="upassword", name="upassword", ng-model="resetpass.upassword", required)
+                input.form-control(type="password" id="upassword" name="upassword" ng-model="resetpass.upassword" required ng-minlength="8")
                 div(ng-show="reset_form.$submitted || reset_form.upassword.$touched")
+                  div(ng-show="reset_form.upassword.$error.minlength") Password must be at least 8 characters in length
                   div(ng-show="reset_form.upassword.$error.required") Password is required
               .form-group
                 label.control-label Confirm Password
-                input.form-control(type="password" id="confirmation", name="confirmation" ng-model="resetpass.confirmation", required, pw-check="upassword" )
+                input.form-control(type="password" id="confirmation" name="confirmation" ng-model="resetpass.confirmation" required pw-check="upassword")
                 div(ng-show="reset_form.$submitted || reset_form.confirmation.$touched")
                   div(ng-show="reset_form.confirmation.$error.required") Confirmation is required
                   div(ng-show="reset_form.confirmation.$error.pwmatch") Password confirmation does not match
