[MISC] Adding missing favicon

--- a/views/voxbone_widget.jade
+++ b/views/voxbone_widget.jade
@@ -1,8 +1,10 @@
 doctype html
-
 html(lang='en', ng-app="voxboneApp")
   head
     title= title
+
+    link(rel="apple-touch-icon" href="")
+    link(rel="shortcut icon" type="image/x-icon" href="/images/favicon.png")
 
     link(href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css", rel="stylesheet")
     link(href="/stylesheets/root.css", rel="stylesheet")
