--- a/views/widget.jade
+++ b/views/widget.jade
@@ -297,7 +297,7 @@ block content
                     div(style='color: red' ng-show="widget_form.sip_uri.$touched" )
                       div(ng-show="widget_form.sip_uri.$error.required") SIP URI is required
                       div(ng-show="widget_form.sip_uri.$error.pattern") SIP URI must be valid
-                      div(ng-show="widget_form.cannot_validate_sip_uri") SIP URI cannot be validated. Please, try Again
+                      div(ng-show="widget_form.cannot_validate_sip_uri") SIP URI cannot be validated. Please, try again
                   .panel.panel-default
                     .panel-heading
                       a.collapsed.title-toggle(data-toggle="collapse",data-target="#collapseAdvancedCallConfiguration",href="#collapseAdvancedCallConfiguration") Advanced Call Configuration
