--- a/views/forgot.jade
+++ b/views/forgot.jade
@@ -49,28 +49,30 @@ block content
       }]);
 
   .main.registerPage
-    .row
-      .col-xs-12
+    .body
+      .container
+        .row
+          .col-sm-12
 
-        h1 Forgot Password
+            h1 Forgot Password
 
-        if message
-          #tokenError.alert.alert-danger
-            div= message
-        #errormsg.alert.alert-danger(style="display: none;")
-        #successmsg.alert.alert-success(style="display: none;")
+            if message
+              #tokenError.alert.alert-danger
+                div= message
+            #errormsg.alert.alert-danger(style="display: none;")
+            #successmsg.alert.alert-success(style="display: none;")
 
-        #form_container
-          .formWrap
-            form#forgot_form(name="forgot_form", novalidate, ng-controller="ForgotController")
-              .form-group
-                label.control-label Email
-                input.form-control(type="email" id="uemail" name="uemail" ng-model="forgot.uemail", required, value= "#{email}")
-                div(ng-show="forgot_form.$submitted || forgot_form.uemail.$touched")
-                  div(ng-show="forgot_form.uemail.$error.required") Email is required
-                div(ng-show="forgot_form.uemail.$dirty && forgot_form.uemail.$invalid")
-                  div(ng-show="forgot_form.uemail.$error.email") Email is invalid
+            #form_container
+              .formWrap
+                form#forgot_form(name="forgot_form", novalidate, ng-controller="ForgotController")
+                  .form-group
+                    label.control-label Email
+                    input.form-control(type="email" id="uemail" name="uemail" ng-model="forgot.uemail", required, value= "#{email}")
+                    div(ng-show="forgot_form.$submitted || forgot_form.uemail.$touched")
+                      div(ng-show="forgot_form.uemail.$error.required") Email is required
+                    div(ng-show="forgot_form.uemail.$dirty && forgot_form.uemail.$invalid")
+                      div(ng-show="forgot_form.uemail.$error.email") Email is invalid
 
-              button.btn.btn-default#forgot(ng-disabled="forgot_form.$invalid" ng-click="forgot.processForm()") Reset Password
-              br
-              a(href="/")
+                  button.btn.btn-default#forgot(ng-disabled="forgot_form.$invalid" ng-click="forgot.processForm()") Reset Password
+                  br
+                  a(href="/")
