--- a/views/reset.jade
+++ b/views/reset.jade
@@ -61,27 +61,29 @@ block content
       }]);
 
   .main.registerPage
-    .row
-      .col-xs-12
+    .body
+      .container
+        .row
+          .col-sm-12
 
-        h1 Reset Password
+            h1 Reset Password
 
-        #alert.alert.alert-danger(style="display: none;")
+            #alert.alert.alert-danger(style="display: none;")
 
-        #form_container
-          .formWrap
-            form#reset_form(name="reset_form" novalidate ng-controller="ResetController")
-              .form-group
-                label.control-label New Password
-                input.form-control(type="password" id="upassword" name="upassword" ng-model="resetpass.upassword" required ng-minlength="8")
-                div(ng-show="reset_form.$submitted || reset_form.upassword.$touched")
-                  div(ng-show="reset_form.upassword.$error.minlength") Password must be at least 8 characters in length
-                  div(ng-show="reset_form.upassword.$error.required") Password is required
-              .form-group
-                label.control-label Confirm Password
-                input.form-control(type="password" id="confirmation" name="confirmation" ng-model="resetpass.confirmation" required pw-check="upassword")
-                div(ng-show="reset_form.$submitted || reset_form.confirmation.$touched")
-                  div(ng-show="reset_form.confirmation.$error.required") Confirmation is required
-                  div(ng-show="reset_form.confirmation.$error.pwmatch") Password confirmation does not match
+            #form_container
+              .formWrap
+                form#reset_form(name="reset_form" novalidate ng-controller="ResetController")
+                  .form-group
+                    label.control-label New Password
+                    input.form-control(type="password" id="upassword" name="upassword" ng-model="resetpass.upassword" required ng-minlength="8")
+                    div(ng-show="reset_form.$submitted || reset_form.upassword.$touched")
+                      div(ng-show="reset_form.upassword.$error.minlength") Password must be at least 8 characters in length
+                      div(ng-show="reset_form.upassword.$error.required") Password is required
+                  .form-group
+                    label.control-label Confirm Password
+                    input.form-control(type="password" id="confirmation" name="confirmation" ng-model="resetpass.confirmation" required pw-check="upassword")
+                    div(ng-show="reset_form.$submitted || reset_form.confirmation.$touched")
+                      div(ng-show="reset_form.confirmation.$error.required") Confirmation is required
+                      div(ng-show="reset_form.confirmation.$error.pwmatch") Password confirmation does not match
 
-              button.btn.btn-default#reset(ng-disabled="reset_form.$invalid" ng-click="resetpass.processForm()") Update Password
+                  button.btn.btn-default#reset(ng-disabled="reset_form.$invalid" ng-click="resetpass.processForm()") Update Password
