change footer color depending on widget background

--- a/public/stylesheets/less/widget.less
+++ b/public/stylesheets/less/widget.less
@@ -105,9 +105,15 @@
     .btn-style{
       .btn-widget(#92168e);
     }
-    .widget-footer{
+    .widget-footer-left,
+    .widget-footer-right{
       a{
-        color: #d8d8d8;
+        color: #adb3b7;
+      }
+    }
+    .widget-footer-right{
+      a{
+        background-image: url('../../images/widget-brand-light.png');
       }
     }
   }
