--- a/public/stylesheets/root.css
+++ b/public/stylesheets/root.css
@@ -559,7 +559,7 @@ strong {
   min-width: 120px;
   padding: 10px 12px 12px;
   border-top: 1px solid rgba(255, 255, 255, 0.1);
-  text-shadow: 0px -1px #07619E;
+  text-shadow: 0px -1px #07619e;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;
@@ -607,7 +607,7 @@ strong {
   min-width: 120px;
   padding: 10px 12px 12px;
   border-top: 1px solid rgba(255, 255, 255, 0.1);
-  text-shadow: 0px -1px #07619E;
+  text-shadow: 0px -1px #07619e;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;
@@ -694,7 +694,7 @@ strong {
   min-width: 120px;
   padding: 10px 12px 12px;
   border-top: 1px solid rgba(255, 255, 255, 0.1);
-  text-shadow: 0px -1px #07619E;
+  text-shadow: 0px -1px #07619e;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;
@@ -751,7 +751,7 @@ strong {
   min-width: 120px;
   padding: 10px 12px 12px;
   border-top: 1px solid rgba(255, 255, 255, 0.1);
-  text-shadow: 0px -1px #07619E;
+  text-shadow: 0px -1px #07619e;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;
@@ -763,8 +763,12 @@ strong {
   background: -o-linear-gradient(#660f63, #92168e);
   background: linear-gradient(#660f63, #92168e);
 }
-.widget-box.style-b .widget-footer a {
-  color: #d8d8d8;
+.widget-box.style-b .widget-footer-left a,
+.widget-box.style-b .widget-footer-right a {
+  color: #adb3b7;
+}
+.widget-box.style-b .widget-footer-right a {
+  background-image: url('../../images/widget-brand-light.png');
 }
 /* Responsive Style */
 /* =================================================================================
