[vxb-fixes-24] Wrapping code widget text

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -17,7 +17,7 @@ html(lang='en', ng-app="voxboneApp")
     script(src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular-sanitize.min.js",type="application/javascript")
 
     script(src="//cdnjs.cloudflare.com/ajax/libs/raty/2.7.0/jquery.raty.js",type="application/javascript")
-    script(src="//cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js",type="application/javascript")
+    script(src="//google-code-prettify.googlecode.com/svn/loader/run_prettify.js")
     script(src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.5.3/clipboard.min.js",type="application/javascript")
 
     script(src="//webrtc.voxbone.com/js/jssip-0.7.9-vox.js",type="application/javascript")
