--- a/views/widget.jade
+++ b/views/widget.jade
@@ -111,7 +111,19 @@ block content
       };
 
       $scope.showCallButton = function () {
-        return $scope.widget.incompatible_browser_configuration != 'show_text_html';
+        var icb = $scope.widget.incompatible_browser_configuration;
+        return (icb != 'hide_widget') && (icb != 'show_text_html');
+      }
+
+      $scope.getHiddenButtonText = function () {
+        switch($scope.widget.incompatible_browser_configuration) {
+          case 'hide_widget':
+            return "";
+            break;
+          case 'show_text_html':
+            return $scope.widget.show_text_html_value;
+            break;
+        };
       }
 
       $scope.makeCall = function () {
@@ -359,9 +371,9 @@ block content
               span.title Preview
               .boxPanel.preview
                 .prev-view.light
-                  .not-supported#not-supported-message(ng-show="!showCallButton()" ng-bind-html="widget.show_text_html_value")
+                  .not-supported#not-supported-message(ng-show="!showCallButton()" ng-bind-html="getHiddenButtonText()")
                   .widget-box.style-b(ng-show="showCallButton()")
-                    button.btn-style.mdi-communication-call#launch_call( ng-click="makeCall()") #[span {{widget.button_label || 'Call Sales'}}]
+                    button.btn-style.mdi-communication-call#launch_call(ng-click="makeCall()") #[span {{widget.button_label || 'Call Sales'}}]
                     .widget-footer-left
                       a(href="https://test.webrtc.org/" target="_blank") Test your setup
                     .widget-footer-right
