--- a/views/widget.jade
+++ b/views/widget.jade
@@ -82,7 +82,7 @@ block content
         dial_pad: true,
         button_style: 'style-b',
         background_style: 'dark',
-        widget_code: 'Click on Generate Code!',
+        widget_code: 'Enter your SIP URI to Generate the code snippet',
         sip_uri: 'echo@ivrs',
         show_text_html_value: '<h3>This is a placeholder for your message</h3>'
       };
@@ -205,6 +205,7 @@ block content
       };
 
       $scope.sip_provisioning = function(form) {
+        $scope.widget.widget_code = 'Generating code snippet...';
         $scope.widget_form.sip_provisioning = true;
         $scope.widget_form.sip_provisioned = false;
         $scope.widget_form.cannot_validate_sip_uri = '';
@@ -233,6 +234,8 @@ block content
           }, function errorCallback(response){
             console.log("Error: ");
             console.log(response.data);
+            $scope.showWidgetCode = false;
+            $scope.widget.widget_code = 'Error generating widget code snippet. Please check it.';
             $scope.widget_form.cannot_validate_sip_uri = response.data.errors.comeback_errors.apiErrorMessage;
             $scope.widget_form.sip_provisioning = false;
             $scope.widget_form.sip_provisioned = false;
@@ -380,7 +383,7 @@ block content
                     a.grey(href="javascript:void(0)" ng-click="widget.background_style = 'grey'")
                     a.light(href="javascript:void(0)" ng-click="widget.background_style = 'light'")
 
-                .prev-code(ng-show='showWidgetCode')
+                .prev-code
                   .title
                     span Widget Code Snippet
                       p Paste the following HTML code into your website or give it a try using on
@@ -400,7 +403,7 @@ block content
                       pre.prettyprint.lang-html
                         code.prettyprint.lang-html
                           | {{ widget.widget_code }}
-                    .codebox-actions
+                    .codebox-actions(ng-show='showWidgetCode')
                       #[a(id="clipboard_copy" href="#" data-clipboard-target="#widget_code") Copy]
                       #[a(href="#" id="generate-output-code" ng-click='widget.generateOutputCode()') Generate Code]
   script(src="/javascripts/widget.js",type="application/javascript")
