--- a/views/widget.jade
+++ b/views/widget.jade
@@ -32,21 +32,29 @@ block content
       },
       'progress': function (e) {
         console.log('Calling...');
-        $("#vw-title").text("Calling");
       },
       'failed': function (e){
-        console.log('Failed to connect: ' + e.data.cause);
+        console.log('Failed to connect: ' + e.cause);
         $("#vw-title").text("Call Failed");
+        $(".vw-animated-dots").addClass('hidden');
       },
       'accepted': function (e){
         console.log('Call started');
         $("#vw-title").text("In Call");
         $(".vw-animated-dots").removeClass('hidden');
+        $("#vw-unable-to-acces-mic").addClass('hidden');
       },
       'ended': function (e){
         console.log('Call ended');
         $("#vw-title").text("Call Ended");
         $(".vw-animated-dots").addClass('hidden');
+      },
+      'getUserMediaFailed': function (e){
+        console.log('Cannot get User Media');
+        $("#vw-title").text("Call Failed");
+        $(".vw-animated-dots").addClass('hidden');
+        $("#vw-in-call").addClass('hidden');
+        $("#vw-unable-to-acces-mic").removeClass('hidden');
       }
     };
 
@@ -143,6 +151,7 @@ block content
 
         if($scope.isWebRTCSupported()){
           $("#vw-title").text("Calling");
+          $("#vw-unable-to-acces-mic").addClass('hidden');
           $(".vw-animated-dots").removeClass('hidden');
           $(".vox-widget-wrapper").removeClass('hidden');
           $("#vw-in-call").removeClass('hidden');
