[MISC] Enhacing rating

--- a/views/widget.jade
+++ b/views/widget.jade
@@ -155,7 +155,7 @@ block content
           $(".vw-animated-dots").removeClass('hidden');
           $(".vox-widget-wrapper").removeClass('hidden');
           $("#vw-in-call").removeClass('hidden');
-          $("#vw-rating").addClass('hidden');
+          $(".vw-rating").addClass('hidden');
 
           if($scope.widget.dial_pad)
             $("#dialpad").removeClass('hidden');
